kubernetes/apps/frontend/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: frontend

  namespace: apps

spec:

  replicas: 2

  selector:

    matchLabels:

      app: frontend

  template:

    metadata:

      labels:

        app: frontend

    spec:

      containers:

        - name: frontend

          image: 913524913728.dkr.ecr.ap-south-1.amazonaws.com/ultimate-platform-frontend:latest

          imagePullPolicy: Always

          ports:

            - containerPort: 80

          resources:

            requests:

              cpu: "700m"

              memory: "700Mi"

            limits:

              cpu: "1000m"

              memory: "1024Mi"

          livenessProbe:

            httpGet:

              path: /

              port: 80

            initialDelaySeconds: 10

            periodSeconds: 10

          readinessProbe:

            httpGet:

              path: /

              port: 80

            initialDelaySeconds: 5

            periodSeconds: 5
# trigger
