kubernetes/apps/frontend/service.yaml
apiVersion: v1

kind: Service

metadata:

  name: frontend-service

  namespace: apps

spec:

  type: LoadBalancer

  selector:

    app: frontend

  ports:

    - port: 80

      targetPort: 80
